<resources>
    <string name="app_name">AI Transport</string>
    <string name="navigation_home_title">Home</string>
    <string name="navigation_car_title">Car</string>
    <string name="navigation_map_title">Map</string>
    <string name="google_maps_key">AIzaSyCfN4dTcmwG5oRK977YkZR3kcrP9M9BGV0</string>


    <string name="title_activity_car">CarActivity</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_login">Sign in</string>
    <!--Strings related to login-->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_out_int_short">Sign out</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- ... -->
    <string name="facebook_application_id" translatable="false">APP_ID</string>
    <!-- Facebook Application ID, prefixed by 'fb'. Enables Chrome Custom tabs. -->
    <string name="facebook_login_protocol_scheme" translatable="false">fbAPP_ID</string>


    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="error_no_network">Error no network available</string>
    <string name="sign_in_cancelled">Sign in cancelled</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="display_profile_name">Your name</string>
    <string name="display_profile_email">Your @email</string>
    <string name="notification_title">Transport AI</string>
    <string name="notification_text">A notification text !</string>
    <string name="nav_map">Map</string>
    <string name="nav_booking">Booking</string>
    <string name="nav_payment">Payment</string>
    <string name="nav_edit">Edit Profile</string>


</resources>
