<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="HardcodedText"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_round_account_circle_24px"
            android:title="@string/action_sign_in_short" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_round_map_24px"
            android:title="@string/nav_map" />
        <item
            android:id="@+id/nav_booking"
            android:icon="@drawable/ic_directions_car_black_24px"
            android:title="@string/nav_booking" />
        <item
            android:id="@+id/nav_payment"
            android:icon="@drawable/ic_round_payment_24px"
            android:title="@string/nav_payment" />
        <item
            android:id="@+id/nav_edit"
            android:icon="@drawable/ic_round_edit_24px"
            android:title="@string/nav_edit" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_round_exit_to_app_24px"
            android:title="@string/action_sign_out_int_short" />


    </group>

</menu>
